# gitlab-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  plan.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
gitlab_mcp/: auth.py  client.py  config.py  models.py  server.py
gitlab_mcp/tools/: common.py  merge_requests.py  repository.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_merge_requests.py  test_repository.py
tests/tools/: test_common.py  test_merge_requests.py  test_repository.py
