[project]
name = "gitlab-mcp"
version = "0.2.2"
description = "GitLab MCP server for AI-assisted code review"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "python-gitlab==7.0.0",
    "fastmcp==2.14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
